--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-<h1>YOUR SITE TITLE</h1>
-<p>Your text blahblahbhalbha</p>
-<p>Another paragraph!  Maybe more text!</p>
+<h1>hbdhj's personal websites</h1>
+<p>Welcome to my personal websites</p>
+<p>Will be more in future!</p>
 </body>
 </html>
