--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1>hbdhj's personal websites</h1>
 <p>Welcome to my personal websites</p>
-<p>Will be more in future!</p>
+<h2>hobbies</h2>
+<a href="/hobbies/travels/overseas/islands/index.html">本文本</a> 是一个指向本网站中的一个页面的链接。</p>
 </body>
 </html>
