--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -11,10 +11,11 @@
 <p>Welcome to my personal websites</p>
 <table border="1">
 <tr>
-<td>Islands</td>
-<td>Price(KY/2A1b)</td>
-<td>Bed2bed time</td>
-<td>Recommeded Trip Date</td>
+<th>Islands</th>
+<th>Price(KY/2A1b)</th>
+<th>Bed2bed time</th>
+<th>Recommeded Trip Date</th>
+<th>Activities</th>
 </tr>
 <tr>
 <td>Maledives</td>
