--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>hbdhj's personal websites</h1>
 <p>Welcome to my personal websites</p>
 <h2>hobbies</h2>
-<a href="/hobbies/travels/overseas/islands/index.html">本文本</a> 是一个指向本网站中的一个页面的链接。</p>
+<p><a href="/hobbies/travels/overseas/islands/index.html">Overseas Islands</a> </p>
 </body>
 </html>
