--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -22,6 +22,21 @@
 <td>45/4</td>
 <td>11hrs (North Male Atoll)</td>
 <td>The whole year</td>
+<td>Snorkeling,Diving,Fishing</td>
+</tr>
+<tr>
+<td>Phuket</td>
+<td>30/5</td>
+<td>10hrs</td>
+<td>Nov-Apr</td>
+<td>Shows,Animals,Snorkeling,Diving</td>
+</tr>
+<tr>
+<td>Saipan</td>
+<td>30/4</td>
+<td>12hrs</td>
+<td>Dec-Jun</td>
+<td>Snorkeling, Diving, Water activities</td>
 </tr>
 </table>
 </body>
