--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>网站名字</title>
 <!-- Add some style to your site, see http://getbootstrap.com for details -->
-<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<!--<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
 </head>
 <body>
 <h1>The overseas islands</h1>
@@ -37,6 +37,27 @@
 <td>12hrs</td>
 <td>Dec-Jun</td>
 <td>Snorkeling, Diving, Water activities</td>
+</tr>
+<tr>
+<td>Bali</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Santoni</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Santoni</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </table>
 </body>
