--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -16,12 +16,16 @@
 <th>Bed2bed time</th>
 <th>Recommeded Trip Date</th>
 <th>Activities</th>
+<th>Related</th>
+<th>Similar</th>
+<th>Who</th>
 </tr>
 <tr>
 <td>Maledives</td>
 <td>45/4</td>
 <td>11hrs (North Male Atoll)</td>
 <td>The whole year</td>
+<td>Snorkeling,Diving,Fishing</td>
 <td>Snorkeling,Diving,Fishing</td>
 </tr>
 <tr>
@@ -53,7 +57,21 @@
 <td></td>
 </tr>
 <tr>
-<td>Santoni</td>
+<td>Boracay</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Seychelles</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Mauritius</td>
 <td></td>
 <td></td>
 <td></td>
