--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -21,13 +21,14 @@
 <th>Who</th>
 </tr>
 <tr>
-<td>Maledives</td>
-<td>45/4</td>
-<td>11hrs (North Male Atoll)</td>
-<td>The whole year</td>
-<td>Snorkeling,Diving,Fishing</td>
+<td>Jeju</td>
 <td></td>
 <td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td>Myself</td>
 </tr>
 <tr>
 <td>Phuket</td>
@@ -37,6 +38,7 @@
 <td>Shows,Animals,Snorkeling,Diving</td>
 <td></td>
 <td></td>
+<td>Myself</td>
 </tr>
 <tr>
 <td>Saipan</td>
@@ -44,6 +46,7 @@
 <td>12hrs</td>
 <td>Dec-Jun</td>
 <td>Snorkeling, Diving, Water activities</td>
+<td></td>
 <td></td>
 <td></td>
 </tr>
@@ -55,9 +58,21 @@
 <td></td>
 <td></td>
 <td></td>
+<td>Myself</td>
 </tr>
 <tr>
-<td>Santoni</td>
+<td>Maledives</td>
+<td>45/4</td>
+<td>11hrs (North Male Atoll)</td>
+<td>The whole year</td>
+<td>Snorkeling,Diving,Fishing</td>
+<td></td>
+<td></td>
+<td>Myself</td>
+</tr>
+<tr>
+<td>Santorini</td>
+<td></td>
 <td></td>
 <td></td>
 <td></td>
@@ -73,6 +88,7 @@
 <td></td>
 <td></td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Seychelles</td>
@@ -82,9 +98,51 @@
 <td></td>
 <td></td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Mauritius</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Tahiti</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Iceland</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Great Barrier Reef</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Palau</td>
+<td></td>
 <td></td>
 <td></td>
 <td></td>
