--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -19,6 +19,7 @@
 <th>Related</th>
 <th>Similar</th>
 <th>Who</th>
+<th>Visa</th>
 </tr>
 <tr>
 <td>Jeju</td>
@@ -28,7 +29,8 @@
 <td></td>
 <td></td>
 <td></td>
-<td>Myself</td>
+<td></td>
+<td>N</td>
 </tr>
 <tr>
 <td>Phuket</td>
@@ -38,7 +40,8 @@
 <td>Shows,Animals,Snorkeling,Diving</td>
 <td></td>
 <td></td>
-<td>Myself</td>
+<td>My family, Tian Rui</td>
+<td>N</td>
 </tr>
 <tr>
 <td>Saipan</td>
@@ -48,7 +51,8 @@
 <td>Snorkeling, Diving, Water activities</td>
 <td></td>
 <td></td>
-<td></td>
+<td>My family</td>
+<td>Y</td>
 </tr>
 <tr>
 <td>Bali</td>
@@ -58,7 +62,8 @@
 <td></td>
 <td></td>
 <td></td>
-<td>Myself</td>
+<td>Wang Aihua; Wang Chao</td>
+<td>N</td>
 </tr>
 <tr>
 <td>Maledives</td>
@@ -68,7 +73,8 @@
 <td>Snorkeling,Diving,Fishing</td>
 <td></td>
 <td></td>
-<td>Myself</td>
+<td>My family</td>
+<td>N</td>
 </tr>
 <tr>
 <td>Santorini</td>
@@ -78,7 +84,8 @@
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td>Myself</td>
+<td>Y</td>
 </tr>
 <tr>
 <td>Boracay</td>
@@ -89,6 +96,7 @@
 <td></td>
 <td></td>
 <td></td>
+<td>Y</td>
 </tr>
 <tr>
 <td>Seychelles</td>
@@ -98,7 +106,8 @@
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td>Ding Shuo</td>
+<td>N</td>
 </tr>
 <tr>
 <td>Mauritius</td>
@@ -109,6 +118,7 @@
 <td></td>
 <td></td>
 <td></td>
+<td>Y</td>
 </tr>
 <tr>
 <td>Tahiti</td>
@@ -119,6 +129,7 @@
 <td></td>
 <td></td>
 <td></td>
+<td>N</td>
 </tr>
 <tr>
 <td>Iceland</td>
@@ -129,7 +140,7 @@
 <td></td>
 <td></td>
 <td></td>
-</tr>
+<td>Y</td>
 <tr>
 <td>Great Barrier Reef</td>
 <td></td>
@@ -138,7 +149,8 @@
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td>Dai Gang</td>
+<td>Y</td>
 </tr>
 <tr>
 <td>Palau</td>
@@ -149,6 +161,18 @@
 <td></td>
 <td></td>
 <td></td>
+<td>N</td>
+</tr>
+<tr>
+<td>Sabah</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td>Wen Yinxin</td>
+<td>Y</td>
 </tr>
 </table>
 </body>
