--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -7,173 +7,25 @@
 <!--<link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
 </head>
 <body>
-<h1>The overseas islands</h1>
-<p>Welcome to my personal websites</p>
-<table border="1">
-<tr>
-<th>Islands</th>
-<th>Price(KY/2A1b)</th>
-<th>Bed2bed time</th>
-<th>Recommeded Trip Date</th>
-<th>Activities</th>
-<th>Related</th>
-<th>Similar</th>
-<th>Who</th>
-<th>Visa</th>
-</tr>
-<tr>
-<td>Jeju</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>N</td>
-</tr>
-<tr>
-<td>Phuket</td>
-<td>30/5</td>
-<td>10hrs</td>
-<td>Nov-Apr</td>
-<td>Shows,Animals,Snorkeling,Diving</td>
-<td></td>
-<td></td>
-<td>My family, Tian Rui</td>
-<td>N</td>
-</tr>
-<tr>
-<td>Saipan</td>
-<td>30/4</td>
-<td>12hrs</td>
-<td>Dec-Jun</td>
-<td>Snorkeling, Diving, Water activities</td>
-<td></td>
-<td></td>
-<td>My family</td>
-<td>Y</td>
-</tr>
-<tr>
-<td>Bali</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Wang Aihua; Wang Chao</td>
-<td>N</td>
-</tr>
-<tr>
-<td>Maledives</td>
-<td>45/4</td>
-<td>11hrs (North Male Atoll)</td>
-<td>The whole year</td>
-<td>Snorkeling,Diving,Fishing</td>
-<td></td>
-<td></td>
-<td>My family</td>
-<td>N</td>
-</tr>
-<tr>
-<td>Santorini</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Myself</td>
-<td>Y</td>
-</tr>
-<tr>
-<td>Boracay</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Y</td>
-</tr>
-<tr>
-<td>Seychelles</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Ding Shuo</td>
-<td>N</td>
-</tr>
-<tr>
-<td>Mauritius</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Y</td>
-</tr>
-<tr>
-<td>Tahiti</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>N</td>
-</tr>
-<tr>
-<td>Iceland</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Y</td>
-<tr>
-<td>Great Barrier Reef</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Dai Gang</td>
-<td>Y</td>
-</tr>
-<tr>
-<td>Palau</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>N</td>
-</tr>
-<tr>
-<td>Sabah</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td>Wen Yinxin</td>
-<td>Y</td>
-</tr>
+<h1 align="center">The overseas islands</h1>
+<p align="center">Welcome to my personal websites</p>
+<table border="1" align="center">
+<tr><th>Islands</th><th>Price(KY/2A1b)</th><th>Bed2bed time</th><th>Recommeded Trip Date</th><th>Activities</th><th>Related</th><th>Similar</th><th>Who</th><th>Visa</th></tr>
+<tr><td>Jeju</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
+<tr><td>Okinawa</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
+<tr><td>Phuket</td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>Shows,Animals,Snorkeling,Diving</td><td>Phiphi</td><td>Bali</td><td>My family, Tian Rui</td><td>Y</td></tr>
+<tr><td>Saipan</td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>Snorkeling, Diving, Water activities</td><td></td><td></td><td>My family</td><td>N</td></tr>
+<tr><td>Bali</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wang Aihua; Wang Chao</td><td>N</td></tr>
+<tr><td>Maledives</td><td>45/4</td><td>11hrs (North Male Atoll)</td><td>The whole year</td><td>Snorkeling,Diving,Fishing</td><td></td><td></td><td>My family</td><td>N</td></tr>
+<tr><td>Santorini</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Myself</td><td>Y</td></tr>
+<tr><td>Boracay</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
+<tr><td>Seychelles</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Ding Shuo</td><td>N</td></tr>
+<tr><td>Mauritius</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
+<tr><td>Tahiti</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
+<tr><td>Iceland</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
+<tr><td>Great Barrier Reef</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Dai Gang</td><td>Y</td></tr>
+<tr><td>Palau</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
+<tr><td>Sabah</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wen Yinxin</td><td>Y</td></tr>
 </table>
 </body>
 </html>
