--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -10,22 +10,22 @@
 <h1 align="center">The overseas islands</h1>
 <p align="center">Welcome to my personal websites</p>
 <table border="1" align="center">
-<tr><th>Islands</th><th>Price(KY/2A1b)</th><th>Bed2bed time</th><th>Recommeded Trip Date</th><th>Activities</th><th>Related</th><th>Similar</th><th>Who</th><th>Visa</th></tr>
-<tr><td>Jeju</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
-<tr><td>Okinawa</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
-<tr><td>Phuket</td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>Shows,Animals,Snorkeling,Diving</td><td>Phiphi</td><td>Bali</td><td>My family, Tian Rui</td><td>Y</td></tr>
-<tr><td>Saipan</td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>Snorkeling, Diving, Water activities</td><td></td><td></td><td>My family</td><td>N</td></tr>
-<tr><td>Bali</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wang Aihua; Wang Chao</td><td>N</td></tr>
-<tr><td>Maledives</td><td>45/4</td><td>11hrs (North Male Atoll)</td><td>The whole year</td><td>Snorkeling,Diving,Fishing</td><td></td><td></td><td>My family</td><td>N</td></tr>
-<tr><td>Santorini</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Myself</td><td>Y</td></tr>
-<tr><td>Boracay</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
-<tr><td>Seychelles</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Ding Shuo</td><td>N</td></tr>
-<tr><td>Mauritius</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
-<tr><td>Tahiti</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
-<tr><td>Iceland</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Y</td></tr>
-<tr><td>Great Barrier Reef</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Dai Gang</td><td>Y</td></tr>
-<tr><td>Palau</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td></tr>
-<tr><td>Sabah</td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wen Yinxin</td><td>Y</td></tr>
+<tr><th>Islands</th><th>Price(KY/2A1b)</th><th>Bed2bed time</th><th>Recommeded Trip Date</th><th>Activities</th><th>Related</th><th>Similar</th><th>Who</th><th>Visa</th><th>Special</th></tr>
+<tr><td><a href="jeju.html">Jeju</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td>Cruises</td></tr>
+<tr><td><a href="okinawa.html">Okinawa</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
+<tr><td><a href="phuket.html">Phuket</a></td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>Shows,Animals,Snorkeling,Diving</td><td>Phiphi</td><td>Bali,Saipan</td><td>My family, Tian Rui</td><td>Y</td><td></td></tr>
+<tr><td><a href="saipan.html">Saipan</a></td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>Snorkeling, Diving, Water activities</td><td></td><td>Phuket,Bali</td><td>My family</td><td>N</td><td></td></tr>
+<tr><td><a href="bali.html">Bali</a></td><td></td><td></td><td></td><td></td><td></td><td>Phuket,Saipan</td><td>Wang Aihua; Wang Chao</td><td>N</td><td></td></tr>
+<tr><td><a href="maledives.html">Maledives</a></td><td>45/4</td><td>11hrs (Male)</td><td>The whole year</td><td>Snorkeling,Diving,Fishing</td><td></td><td>Palau</td><td>My family</td><td>N</td><td></td></tr>
+<tr><td><a href="palau.html">Palau</a></td><td></td><td></td><td></td><td></td><td></td><td>Snorkeling,Diving,Fishing</td><td>Wait for you</td><td>N</td><td></td></tr>
+<tr><td><a href="sabah.html">Sabah</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wen Yinxin</td><td>Y</td><td>Safety</td></tr>
+<tr><td><a href="boracay.html">Boracay</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
+<tr><td><a href="santorini.html">Santorini</a></td><td></td><td>20hrs (Athens)</td><td>May-Nov</td><td>Photo,Swimming,History</td><td>Athens</td><td>Zakynthos, Mykonos</td><td>Myself</td><td>Y</td><td></td></tr>
+<tr><td><a href="GreatBarrierReef.html">Great Barrier Reef</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Dai Gang</td><td>Y</td><td></td></tr>
+<tr><td><a href="seychelles.html">Seychelles</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Ding Shuo</td><td>N</td><td></td></tr>
+<tr><td><a href="mauritius.html">Mauritius</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td></td></tr>
+<tr><td><a href="tahiti.html">Tahiti</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td></td></tr>
+<tr><td><a href="iceland.html">Iceland</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
 </table>
 </body>
 </html>
