--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -45,7 +45,7 @@
 </div>
 <div class="pair">
 <div class="right_wide_text">
-<p>Ð¡¿¨Ëþº£Ì²Î»ÓÚ¿¨Ëþº£Ì²ÄÏ²à, Î»ÖÃ×îÎª¿¿ÄÏ£¬Ö÷ÒªÊÇ¿¨ËþÈøÄá¡¢º£°¶¾ÆµêµÄ¿ÍÈËÓÎÀÀ£¬ÆäËûÓÎ¿ÍÏà¶Ô½ÏÉÙ¡£»ªÈËÏà¶Ô½ÏÉÙ£¬¶íÂÞË¹ÈË½Ï¶à</p>
+<p><strong>µËº£¾üÌáÊ¾£º</strong>Ð¡¿¨Ëþº£Ì²Î»ÓÚ¿¨Ëþº£Ì²ÄÏ²à, Î»ÖÃ×îÎª¿¿ÄÏ£¬º£Ì²Ò²±È½ÏÐ¡£¬Ö÷ÒªÊÇ¿¨ËþÈøÄá¡¢º£°¶¾ÆµêµÄ¿ÍÈËÓÎÀÀ£¬ÆäËûÓÎ¿ÍÏà¶Ô½ÏÉÙ¡£»ªÈËÏà¶Ô½ÏÉÙ£¬¶íÂÞË¹ÈË½Ï¶à</p>
 </div>
 <div class="left_small_img">
   <img src="katanoi.jpg" alt="Ballade" width="400" height="400">
@@ -185,14 +185,14 @@ Cha Bah²ÍÌüÌá¹©ÎÂÜ°µÄº£±õÓÃ²ÍÌåÑé£¬¹©Ó¦ÐÂÏÊµÄº£ÏÊÉÕ¿¾ÁÏÀí¡£Tai Rom Prao²ÍÌüÌá¹©¹
 <div class="pair">
 <div class="left_wide_text">
 <p>
-ÍþË¹Í¡¾ÆµêÎ»ÓÚÒ»ÌõÄþ¾²µÄº£°¶ÏßÅÔ£¬Ìá¹©¶àÖÖ½¡ÉíÉèÊ©ºÍ3¸öÎÞ±ßÓ¾³Ø£¬²¢ÏíÓÐÃÔÈËµÄº£¾°¡£¾ÆµêÉèÓÐÒ»¸öspaÖÐÐÄºÍÌá¹©24Ð¡Ê±·þÎñµÄÀñ±öÌ¨¡£ÏÖ´ú»¯µÄ¿Í·¿ÏíÓÐ´óº£È«¾°£¬ÉèÓÐ»§Íâ×ùÎ»£¬²¢Í¨¹ý»¬¶¯²£Á§ÃÅÍ¨ÍùÒ»¸öË½ÈËÑôÌ¨¡£¿Í·¿Ìá¹©Ò»Ì¨37Ó¢´çÆ½ÃæµçÊÓ¡¢iPod»ù×ùºÍDVD²¥·Å»ú¡£The Westin Siray Bay Resort & Spa Phuket¾ÆµêÌá¹©Ãâ·ÑÍ£³µ³¡£¬¾àÀëÆÕ¼ªÕòÓÐ15·ÖÖÓµÄ³µ³Ì¡£¾Æµê¾àÀëÆÕ¼ª¹ú¼Ê»ú³¡ºÍPhuket FantaSea ShowÖ÷Ìâ¹«Ô°Ô¼ÓÐ40·ÖÖÓµÄ³µ³Ì¡£¿ÍÈË¿ÉÒÔÔÚº£Ì²±ßÏíÊÜè¤Ù¤»òÕß´òÅÅÇò¡£ÆäËûÉèÊ©°üÀ¨Ò»¸ö¶ùÍ¯¾ãÀÖ²¿¡¢Ãâ·ÑµÄ·Ç»ú¶¯Ë®ÉÏÔË¶¯ÒÔ¼°¹«¹²ÇøÓòµÄÃâ·ÑÎÞÏßÍøÂçÁ¬½Ó¡£Prego by the Beach²ÍÌüÌá¹©ÏÖ´úÒâ´óÀûÃÀÊ³ºÍÊæ»ºµÄ¾Æ°ÉÒôÀÖ£¬¶øEEST and Seasonal Taste²ÍÌüÌá¹©·áÊ¢µÄÑÇÖÞÃÀÊ³¡£Daily TreatsÎ÷±ýÎÝ¹©Ó¦ÐÂÏÊµÄ¸âµã¡¢µ°¸âºÍ¿§·È¡£<strong>µËº£¾üµãÆÀ£º</strong>ÕæÕýµÄÎåÐÇ¾Æµê£¬ÓµÓÐË½¼Òº£Ì²£¬Ã¿¸ö·¿¼ä¶¼Ãæ³¯´óº££¬ÓÐºÜ°ôµÄÎÞ±ßÓ¾³Ø£¬¾ÍÊÇÎ»ÖÃÌ«Æ«ÁË£¬º£Ë®Ò²Ò»°ã£¡</p>
+ÍþË¹Í¡¾ÆµêÎ»ÓÚÒ»ÌõÄþ¾²µÄº£°¶ÏßÅÔ£¬Ìá¹©¶àÖÖ½¡ÉíÉèÊ©ºÍ3¸öÎÞ±ßÓ¾³Ø£¬²¢ÏíÓÐÃÔÈËµÄº£¾°¡£¾ÆµêÉèÓÐÒ»¸öspaÖÐÐÄºÍÌá¹©24Ð¡Ê±·þÎñµÄÀñ±öÌ¨¡£ÏÖ´ú»¯µÄ¿Í·¿ÏíÓÐ´óº£È«¾°£¬ÉèÓÐ»§Íâ×ùÎ»£¬²¢Í¨¹ý»¬¶¯²£Á§ÃÅÍ¨ÍùÒ»¸öË½ÈËÑôÌ¨¡£¿Í·¿Ìá¹©Ò»Ì¨37Ó¢´çÆ½ÃæµçÊÓ¡¢iPod»ù×ùºÍDVD²¥·Å»ú¡£The Westin Siray Bay Resort & Spa Phuket¾ÆµêÌá¹©Ãâ·ÑÍ£³µ³¡£¬¾àÀëÆÕ¼ªÕòÓÐ15·ÖÖÓµÄ³µ³Ì¡£¾Æµê¾àÀëÆÕ¼ª¹ú¼Ê»ú³¡ºÍPhuket FantaSea ShowÖ÷Ìâ¹«Ô°Ô¼ÓÐ40·ÖÖÓµÄ³µ³Ì¡£¿ÍÈË¿ÉÒÔÔÚº£Ì²±ßÏíÊÜè¤Ù¤»òÕß´òÅÅÇò¡£ÆäËûÉèÊ©°üÀ¨Ò»¸ö¶ùÍ¯¾ãÀÖ²¿¡¢Ãâ·ÑµÄ·Ç»ú¶¯Ë®ÉÏÔË¶¯ÒÔ¼°¹«¹²ÇøÓòµÄÃâ·ÑÎÞÏßÍøÂçÁ¬½Ó¡£Prego by the Beach²ÍÌüÌá¹©ÏÖ´úÒâ´óÀûÃÀÊ³ºÍÊæ»ºµÄ¾Æ°ÉÒôÀÖ£¬¶øEEST and Seasonal Taste²ÍÌüÌá¹©·áÊ¢µÄÑÇÖÞÃÀÊ³¡£Daily TreatsÎ÷±ýÎÝ¹©Ó¦ÐÂÏÊµÄ¸âµã¡¢µ°¸âºÍ¿§·È¡£<strong>µËº£¾üµãÆÀ£º</strong>ÕæÕýµÄÎåÐÇ¾Æµê£¬ÓµÓÐË½¼Òº£Ì²£¬Ã¿¸ö·¿¼ä¶¼Ãæ³¯´óº££¬ÓÐºÜ°ôµÄÎÞ±ßÓ¾³Ø£¬¾ÍÊÇÎ»ÖÃÌ«Æ«ÁË£¬Íí·¹Ö»ºÃÔÚ¾Æµê³Ô£¬¹óÇÒ²»ºÃ³Ô£¬º£Ì²±È½ÏÐ¡£¬º£Ë®Ò²Ò»°ã£¡</p>
 </div>
 <div class="right_small_img">
   <img src="westin.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">ÆÕ¼ªµºÍþË¹Í¡Î÷À³ÍåSpa¶È¼Ù¾Æµê</div>
 </div>
 </div>
-<div class="cat_bar"><h2>½»Í¨¼°²ÍÒû</h2></div>
+<div class="cat_bar"><h2>½»Í¨¡¢Ç©Ö¤¡¢²ÍÒû¼°ÆäËü</h2></div>
 <div class="mini_bar"><h3>º½°à</h3></div>
 <div class="text">
 <p>±±¾©·ÉÆÕ¼ªµÄÖ±·Éº½°àÐèÒª6¸öÐ¡Ê±£¬Öµ·É¹«Ë¾Îª¹úº½ºÍº£º½£¬¾ùÎªºìÑÛº½°à£¬×ª³¡º½°àÐèÒª8-12¸öÐ¡Ê±£¬10-12Ð¡Ê±µÄ¾Ó¶à£¬µÖ´ïÊ±¼ä¿ÉÒÔ¸ü¼ÓÀíÏë¡£</p>
@@ -209,9 +209,17 @@ Cha Bah²ÍÌüÌá¹©ÎÂÜ°µÄº£±õÓÃ²ÍÌåÑé£¬¹©Ó¦ÐÂÏÊµÄº£ÏÊÉÕ¿¾ÁÏÀí¡£Tai Rom Prao²ÍÌüÌá¹©¹
 <div class="text">
 <p>¶ÌÍ¾Ö±½Ótutu³µ£¬»òË«Ìõ³µ£»³¤Í¾ÍÆ¼öÂÃÓÎÉç°ü³µ</p>
 </div>
+<div class="mini_bar"><h3>Ç©Ö¤</h3></div>
+<div class="text">
+<p>ÆÕ¼ªµºÊÇÐèÒªÌ©¹úÇ©Ö¤µÄ£¬ÂäµØÇ©Ò²ÓÐÒ»¶¨ÒªÇó£¬ËùÒÔÍÆ¼ö¹úÄÚ°ìºÃÇ©Ö¤£¬ÔÙ³ö·¢¡£³öÇ©Ò»°ãÊÇ3-4¸ö¹¤×÷ÈÕ£¬ºÜ¿ì£¬Ã»ÌýËµ¹ý¾ÜÇ©µÄ¡£ÔÚ·É»úÉÏÇë»ý¼«Ö÷¶¯µÄÍù¿Õ½ãÒªÈë¾³µ¥£¨¶àÒª¼¸ÕÅ£¬ÒòÎª»áÌî´í£©£¬ÕÒ¸öÍøÉÏµÄÄ£°åÌîºÃ£¬Èë¾³Ê±ÄÜ½ÚÊ¡´óÁ¿Ê±¼ä¡£Ì©¹úÈë¾³µÄ°ìÊÂÐ§ÂÊµäÐÍµÄµÚÈýÊÀ½ç£¡</p>
+</div>
 <div class="mini_bar"><h3>ÒûÊ³</h3></div>
 <div class="text">
 <p>ÒÔÎ÷²ÍºÍÌ©²ÍÎªÖ÷£¬½ÏÎªÎÀÉú£¬Ã»ÓÐ·¢ÏÖ¸¹ÐººÍÅ»ÍÂÏÖÏó</p>
+</div>
+<div class="mini_bar"><h3>×Ü³É±¾ºÍµäÐÍµÄÏû·Ñ¼Û¸ñ</h3></div>
+<div class="text">
+<p>µ­¼¾²»Ëã¹ºÎïÓ¦¸Ã5-7Ç§Ôª/ÈË/5Ìì£¬Íú¼¾Ò»°ã7-9Ç§/ÈË/ÎåÌì¡£³Ô·¹¡¢ÒûÁÏºÍË®¹ûºÍ¹úÄÚ³ÖÆ½¡£</p>
 </div>
 </body>
 </html>
