--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset="gb2312">
-<link rel="stylesheet" type="text/css" href="../islands.css" />
+<link rel="stylesheet" type="text/css" href="islands.css" />
 </head>
 
 <body>
