--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset="gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../islands.css" />
 </head>
 
