--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -3,12 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset="utf-8">
 <link rel="stylesheet" type="text/css" href="../islands.css" />
+<script language="JavaScript" src="../resetdivwidth.js"></script>
 </head>
 
-<body>
-
-
-<div class="head"><h1>ÆÕ¼ªµº</h1></div>
+<body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
+<div class="head">ÆÕ¼ªµº</div>
 <div class="cat_bar">µãÆÀºÍÌØ±ðÌáÐÑ</div>
 <div class="text">
 <p><strong>µËº£¾ü£º</strong>ÆÕ¼ªµº·Ç³£ÊÊºÏ4-10ËêÐ¡ÅóÓÑ³ö¹úÂÃÓÎ£¬ËüµÄº£Ì²¾°É«²»ÊÇ×î¼Ñ£¬µ«½»Í¨±ãÀû£¬»î¶¯¶àÑù£¬ÐÔ¼Û±È¸ß¡£<strong>ÌØ±ðÌáÐÑ£º</strong>Ì©¹úÈËÕÒÇ®Ê±¾­³£ÉÙÕÒ£¬ÔÚÎÒÃÇ5ÌìµÄÐÐ³ÌÖÐ·¢ÉúËÄ´Î£»È¥Íâµº¸¡Ç³µÄÒ»ÈÕÓÎ£¬ºÜÈÝÒ×ÔÎ´¬¡£</p>
@@ -18,7 +17,7 @@
 <div class="mini_bar">º£Ì²</div>
 <div class="pair">
 <div class="left_wide_text">
-<p>°Å¶«º£Ì²Î»ÓÚÆÕ¼ªµºÎ÷º£°¶ÖÐ¶Î£¬È«³¤3¹«Àï£¬ÊôÓÚ¹«¹²ÇøÓò£¬ÎÞÐèÃÅÆ±£¬24Ð¡Ê±Ïò¹«ÖÚ¿ª·Å¡£ÌìÈ»µÄº£ÍåÆÁÕÏÊ¹µÃ°Å¶«É³Ì²Æ½»º£¬º£ÀËÈáºÍ£¬ÊÊºÏÓÎÓ¾¼°ÔÚÉ³Ì²±ßæÒÏ·¡£¿¿×ÅµÃÌì¶ÀºñµÄµØÀí»·¾³£¬°Å¶«º£Ì²Ò²³ÉÎªÆÕ¼ªµº¿ª·¢×îÔç£¬·¢Õ¹×î³ÉÊìµÄº£Ì²Ö®Ò»£¬ÕâÀï¾ÆµêÁÖÁ¢£¬²ÍÌü¡¢¾Æ°É¡¢Ð¡ÉÌÆÌ±È±È½ÔÊÇ£¬µ«Ò²ÕýÊÇÒòÎªËýµÄ·±»ª£¬Ê¹µÃ°Å¶«ÂÔÏÔÉÌÒµ»¯£¬É³Ì²ºÍº£Ë®µÄÎÛÈ¾Ò²ÅÅÔÚÆÕ¼ª¸÷¸öº£Ì²Ö®Ê×¡£</p>
+°Å¶«º£Ì²Î»ÓÚÆÕ¼ªµºÎ÷º£°¶ÖÐ¶Î£¬È«³¤3¹«Àï£¬ÊôÓÚ¹«¹²ÇøÓò£¬ÎÞÐèÃÅÆ±£¬24Ð¡Ê±Ïò¹«ÖÚ¿ª·Å¡£ÌìÈ»µÄº£ÍåÆÁÕÏÊ¹µÃ°Å¶«É³Ì²Æ½»º£¬º£ÀËÈáºÍ£¬ÊÊºÏÓÎÓ¾¼°ÔÚÉ³Ì²±ßæÒÏ·¡£¿¿×ÅµÃÌì¶ÀºñµÄµØÀí»·¾³£¬°Å¶«º£Ì²Ò²³ÉÎªÆÕ¼ªµº¿ª·¢×îÔç£¬·¢Õ¹×î³ÉÊìµÄº£Ì²Ö®Ò»£¬ÕâÀï¾ÆµêÁÖÁ¢£¬²ÍÌü¡¢¾Æ°É¡¢Ð¡ÉÌÆÌ±È±È½ÔÊÇ£¬µ«Ò²ÕýÊÇÒòÎªËýµÄ·±»ª£¬Ê¹µÃ°Å¶«ÂÔÏÔÉÌÒµ»¯£¬É³Ì²ºÍº£Ë®µÄÎÛÈ¾Ò²ÅÅÔÚÆÕ¼ª¸÷¸öº£Ì²Ö®Ê×¡£
 </div>
 <div class="right_small_img">
   <img src="padong.jpeg" alt="Ballade" width="400" height="400">
@@ -27,13 +26,14 @@
 </div>
 <div class="pair">
 <div class="right_wide_text">
-<p>¿¨Â×º£Ì²Î»ÓÚ°Å¶«ÒÔÄÏ£¬ÖÐ¼ä¸ô×ÅÒ»×ùÐ¡É½¡£ºÍ°Å¶«º£Ì²±ÈÆðÀ´£¬ÕâÀïÓÐ×Å¸üÃà³¤¿ªÀ«µÄº£°¶Ïß£¬º£Ë®±È°Å¶«¸üÇå³º£¬½ð»ÆÉ«µÄÉ³Ì²Ò²ºÜÈáÈí¡£µ«ÕâÀïµÄº£ÀË½Ï´ó£¬º£¾°ËäºÃ£¬µ«È´²»ÊÇÈ«Äê¶¼ÊÊºÏÓÎÓ¾£¬ÊôÄçË®ÊÂ¼þµÄ¸ß·¢µØÇø£¬ËùÒÔ¿¨Â×º£Ì²Ã»ÓÐÉ³Ì²ÒÎºÍÑôÉ¡£¬Ò²ÕÒ²»µ½ÍÏÒ·É¡¡¢Ïã½¶´¬µÈË®ÉÏ»î¶¯£¬²»Ê±ÓÐ³åÀË°®ºÃÕßÔÚÕâÀï³åÀË¡£¿¨Â×ÓÐ²»ÉÙÐÇ¼¶¾Æµê£¬Óëº£Ì²Ö»ÓÐÒ»ÌõÂíÂ·Ö®¸ô£¬ÊÊºÏÏ²»¶°²¾²¶È¼ÙµÄÓÎ¿Í¡£¹ºÎï²ÍÒûÇøÓòºÍ°Å¶«Ïà±ÈÃ»ÓÐÄÇÃ´¼¯ÖÐ£¬ÑØ×Åº£Ì²ÄÜÕÒµ½±ãÀûµêºÍÒ¹ÊÐ¡£¿¨Â×º£Ì²¼°ÖÜ±ßÊôÓÚ¹«¹²ÇøÓò£¬ÎÞÐèÃÅÆ±£¬24Ð¡Ê±Ïò¹«ÖÚ¿ª·Å¡£ÍíÉÏµÄ¿¨Â×Ô¶´¦¿ÉÒÔ¿´µ½ÉÁË¸µÄÓæ»ð£¬º£Ì²¼Å¾²¶øÀËÂþ¡£</p>
+¿¨Â×º£Ì²Î»ÓÚ°Å¶«ÒÔÄÏ£¬ÖÐ¼ä¸ô×ÅÒ»×ùÐ¡É½¡£ºÍ°Å¶«º£Ì²±ÈÆðÀ´£¬ÕâÀïÓÐ×Å¸üÃà³¤¿ªÀ«µÄº£°¶Ïß£¬º£Ë®±È°Å¶«¸üÇå³º£¬½ð»ÆÉ«µÄÉ³Ì²Ò²ºÜÈáÈí¡£µ«ÕâÀïµÄº£ÀË½Ï´ó£¬º£¾°ËäºÃ£¬µ«È´²»ÊÇÈ«Äê¶¼ÊÊºÏÓÎÓ¾£¬ÊôÄçË®ÊÂ¼þµÄ¸ß·¢µØÇø£¬ËùÒÔ¿¨Â×º£Ì²Ã»ÓÐÉ³Ì²ÒÎºÍÑôÉ¡£¬Ò²ÕÒ²»µ½ÍÏÒ·É¡¡¢Ïã½¶´¬µÈË®ÉÏ»î¶¯£¬²»Ê±ÓÐ³åÀË°®ºÃÕßÔÚÕâÀï³åÀË¡£¿¨Â×ÓÐ²»ÉÙÐÇ¼¶¾Æµê£¬Óëº£Ì²Ö»ÓÐÒ»ÌõÂíÂ·Ö®¸ô£¬ÊÊºÏÏ²»¶°²¾²¶È¼ÙµÄÓÎ¿Í¡£¹ºÎï²ÍÒûÇøÓòºÍ°Å¶«Ïà±ÈÃ»ÓÐÄÇÃ´¼¯ÖÐ£¬ÑØ×Åº£Ì²ÄÜÕÒµ½±ãÀûµêºÍÒ¹ÊÐ¡£¿¨Â×º£Ì²¼°ÖÜ±ßÊôÓÚ¹«¹²ÇøÓò£¬ÎÞÐèÃÅÆ±£¬24Ð¡Ê±Ïò¹«ÖÚ¿ª·Å¡£ÍíÉÏµÄ¿¨Â×Ô¶´¦¿ÉÒÔ¿´µ½ÉÁË¸µÄÓæ»ð£¬º£Ì²¼Å¾²¶øÀËÂþ¡£
 </div>
 <div class="left_small_img">
   <img src="karon.jpeg" alt="Ballade" width="400" height="400">
   <div class="desc">¿¨Â×º£Ì²</div>
 </div>
 </div>
+<!--
 <div class="pair">
 <div class="left_wide_text">
 <p>¿¨Ëþº£Ì²Í¬ÑùÎ»ÓÚÎ÷º£°¶£¬Î»ÓÚ¿¨Â×º£Ì²ÄÏ²à£¬Óë¿¨Â×ÏàÁ¬£¬´Ó°Å¶«³ö·¢³Ë×øà½à½³µÖ»Ðè15·ÖÖÓ£¬·ÑÓÃÔÚ450Ì©îù×óÓÒ¡£ÔÚÈý´óº£Ì²ÖÐ£¬¿¨Ëþº£Ì²ÊÇ×îÊÊºÏÓÎÓ¾µÄ£¬É³Ì²ËäÈ»²»³¤£¬µ«ÊÇÉ³ÖÊÈáÈí£¬º£ÀËÒ²ºÜÎÂÈá£¬º£Ì²Á½¶ËÓÐ½¸Ê¯£¬ÅÄ³öµÄÕÕÆ¬±ð¾ß·ç¸ñ¡£ºÜ¶àÅ·ÃÀÓÎ¿Í¶¼»áã¼ÀÁµØÔÚº£Ì²µÄÉ³Ì²ÒÎÉÏÌÉÉÏÒ»ÕûÌì¡£Õû¸ö¿¨ËþÇøÓòÒÔÅ·ÃÀÓÎ¿Í¾Ó¶à£¬·Ç³£ÓÐº£±ßÐ¡ÕòµÄ·ç¸ñ£¬²ÍÌüÎªÁËÓ­ºÏÓÎ¿ÍµÄ¿ÚÎ¶£¬ÒÔÎ÷Ê½¾Ó¶à£¬ËäÈ»ÕâÀïÒ²ÓÐ¾Æ°É£¬µ«ÊÇ²»»áÏñ°Å¶«ÄÇÑùÐúÄÖ¡£ÕûÌå²ÍÒûºÍ¹ºÎïµÄ¼ÛÎ»¶¼Òª¸ßÓÚ°Å¶«ºÍ¿¨Â×ÇøÓò¡£</p>
@@ -221,5 +221,6 @@ Cha Bah²ÍÌüÌá¹©ÎÂÜ°µÄº£±õÓÃ²ÍÌåÑé£¬¹©Ó¦ÐÂÏÊµÄº£ÏÊÉÕ¿¾ÁÏÀí¡£Tai Rom Prao²ÍÌüÌá¹©¹
 <div class="text">
 <p>µ­¼¾²»Ëã¹ºÎïÓ¦¸Ã5-7Ç§Ôª/ÈË/5Ìì£¬Íú¼¾Ò»°ã7-9Ç§/ÈË/ÎåÌì¡£³Ô·¹¡¢ÒûÁÏºÍË®¹ûºÍ¹úÄÚ³ÖÆ½¡£</p>
 </div>
+-->
 </body>
 </html>
