--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -2,7 +2,8 @@
 <!--<!DOCTYPE html>-->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html">
+<meta http-equiv="charset" content="utf-8">
 <title>oversea islands</title>
 <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
 <script language="JavaScript" src="loadWorldMap.js"></script>
