--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--<!DOCTYPE html>-->
+<!DOCTYPE html>
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html">
-<meta http-equiv="charset" content="utf-8">
+<meta charset='utf-8' />
+<meta http-equiv="Content-Type" content="text/html"/>
+<!--<meta http-equiv="charset" content="utf-8">-->
 <title>oversea islands</title>
 <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
 <script language="JavaScript" src="loadWorldMap.js"></script>
