--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -10,8 +10,8 @@
 <script language="JavaScript" src="loadWorldMap.js"></script>
 </head>
 <body onload="GetMap();">
-<h1 align="center">The overseas islands</h1>
-<p align="center">Welcome to my personal websites version 0.0.2</p>
+<h1 align="center">海岛游攻略</h1>
+<p align="center">version 0.0.3</p>
 <table border="1" align="center">
 <tr><th>Islands</th><th>价格</th><th>床到床时间</th><th>适宜旅行时间</th><th>典型活动</th><th>相关景点</th><th>类似景点</th><th>去过的兄弟</th><th>签证是否</th><th>特别提示</th></tr>
 <tr><td><a href="jeju.html">济州岛</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td>邮轮</td></tr>
