--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset="utf-8">
+<meta charset='utf-8' />
+<meta http-equiv="Content-Type" content="text/html"/>
 <link rel="stylesheet" type="text/css" href="../islands.css" />
 <script language="JavaScript" src="../resetdivwidth.js"></script>
 </head>
