--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -16,13 +16,13 @@
 <tr><th>Islands</th><th>价格</th><th>床到床时间</th><th>适宜旅行时间</th><th>典型活动</th><th>相关景点</th><th>类似景点</th><th>去过的兄弟</th><th>签证是否</th><th>特别提示</th></tr>
 <tr><td><a href="jeju.html">济州岛</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td>邮轮</td></tr>
 <tr><td><a href="okinawa.html">冲绳</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
-<tr><td><a href="phuket/phuket.html">普吉岛</a></td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>寺庙，表演，潜水，攀牙湾</td><td>Phiphi</td><td>Bali,Saipan</td><td>邓海军，田锐</td><td>Y</td><td></td></tr>
+<tr><td><a href="phuket/phuket.html">普吉岛</a></td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>寺庙，表演，潜水，攀牙湾</td><td>皮皮岛</td><td>巴厘岛,塞班岛</td><td>邓海军，田锐</td><td>Y</td><td></td></tr>
 <tr><td><a href="saipan.html">塞班岛</a></td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>潜水，水上运动</td><td></td><td>Phuket,Bali</td><td>邓海军</td><td>N</td><td></td></tr>
 <tr><td><a href="bali.html">巴厘岛</a></td><td></td><td></td><td></td><td></td><td></td><td>Phuket,Saipan</td><td>郝又超，王爱华，汪超</td><td>N</td><td></td></tr>
-<tr><td><a href="singapore.html">新加坡</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>My family</td><td>N</td><td></td></tr>
-<tr><td><a href="pulaubintan.html">巴丹岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Li Hongjun</td><td>N</td><td></td></tr>
-<tr><td><a href="maledives.html">马尔代夫</a></td><td>45/4</td><td>11hrs (Male)</td><td>全年</td><td>潜水、钓鱼、海洋动物</td><td></td><td>Palau</td><td>邓海军，谈猛刚</td><td>N</td><td></td></tr>
-<tr><td><a href="palau.html">帕劳</a></td><td></td><td></td><td></td><td>潜水</td><td></td><td>Maledives</td><td>Wait for you</td><td>N</td><td></td></tr>
+<tr><td><a href="singapore.html">新加坡</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>邓海军</td><td>N</td><td></td></tr>
+<tr><td><a href="pulaubintan.html">巴丹岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>李红君</td><td>N</td><td></td></tr>
+<tr><td><a href="maledives.html">马尔代夫</a></td><td>45/4</td><td>11hrs (Male)</td><td>全年</td><td>潜水、钓鱼、海洋动物</td><td></td><td>帕劳</td><td>邓海军，谈猛刚</td><td>N</td><td></td></tr>
+<tr><td><a href="palau.html">帕劳</a></td><td></td><td></td><td></td><td>潜水</td><td></td><td>马尔代夫</td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="sabah.html">沙巴</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>温胤欣</td><td>Y</td><td>Safety</td></tr>
 <tr><td><a href="boracay.html">长滩</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
 <tr><td><a href="santorini.html">圣托里尼</a></td><td>40/8</td><td>20hrs (Athens)</td><td>May-Nov</td><td>历史，摄影</td><td>Athens</td><td>扎金索斯, 米诺克斯</td><td>邓海军</td><td>Y</td><td></td></tr>
@@ -30,7 +30,7 @@
 <tr><td><a href="seychelles.html">塞舌尔</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>丁硕</td><td>N</td><td></td></tr>
 <tr><td><a href="hawaii.html">夏威夷</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td><td></td></tr>
 <tr><td><a href="mauritius.html">毛里求斯</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td></td></tr>
-<tr><td><a href="fiji.html">斐济</a></td><td></td><td></td><td></td><td></td><td></td><td>Vanuatu</td><td>Wait for you</td><td>N</td><td></td></tr>
+<tr><td><a href="fiji.html">斐济</a></td><td></td><td></td><td></td><td></td><td></td><td>瓦努阿图</td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="tahiti.html">塔希提</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="iceland.html">冰岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
 </table>
