--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset="gb2312">
-<link rel="stylesheet" type="text/css" href="islands.css" />
+<meta charset='utf-8' />
+<meta http-equiv="Content-Type" content="text/html"/>
+<link rel="stylesheet" type="text/css" href="../islands.css" />
+<script language="JavaScript" src="../resetdivwidth.js"></script>
 </head>
 
-<body>
-
-
-<div class="head"><h1>普吉岛</h1></div>
+<body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
+<div class="head">塞班岛</div>
 <div class="cat_bar">点评和特别提醒</div>
 <div class="text">
-<p><strong>邓海军：</strong>普吉岛非常适合4-10岁小朋友出国旅游，它的海滩景色不是最佳，但交通便利，活动多样，性价比高。<strong>特别提醒：</strong>泰国人找钱时经常少找，在我们5天的行程中发生四次；去外岛浮浅的一日游，很容易晕船。</p>
-<p>推荐5-7天的行程，皮皮岛强烈推荐！</p>
+<p><strong>邓海军：</strong>普吉岛适合6-10岁小朋友出国旅游，它的海滩景色不是最佳，但交通便利，活动多样，性价比高。<strong>特别提醒：</strong>泰国人找钱时经常少找，在我们5天的行程中发生四次；去外岛浮浅的一日游，很容易晕船。</p>
+<p>推荐4-6天的行程，军舰岛岛强烈推荐！</p>
 </div>
 <div class="cat_bar">景点</div>
 <div class="mini_bar">海滩</div>
 <div class="pair">
 <div class="left_wide_text">
-<p>芭东海滩位于普吉岛西海岸中段，全长3公里，属于公共区域，无需门票，24小时向公众开放。天然的海湾屏障使得芭东沙滩平缓，海浪柔和，适合游泳及在沙滩边嬉戏。靠着得天独厚的地理环境，芭东海滩也成为普吉岛开发最早，发展最成熟的海滩之一，这里酒店林立，餐厅、酒吧、小商铺比比皆是，但也正是因为她的繁华，使得芭东略显商业化，沙滩和海水的污染也排在普吉各个海滩之首。</p>
+芭东海滩位于普吉岛西海岸中段，全长3公里，属于公共区域，无需门票，24小时向公众开放。天然的海湾屏障使得芭东沙滩平缓，海浪柔和，适合游泳及在沙滩边嬉戏。靠着得天独厚的地理环境，芭东海滩也成为普吉岛开发最早，发展最成熟的海滩之一，这里酒店林立，餐厅、酒吧、小商铺比比皆是，但也正是因为她的繁华，使得芭东略显商业化，沙滩和海水的污染也排在普吉各个海滩之首。
 </div>
 <div class="right_small_img">
   <img src="padong.jpeg" alt="Ballade" width="400" height="400">
@@ -27,7 +27,7 @@
 </div>
 <div class="pair">
 <div class="right_wide_text">
-<p>卡伦海滩位于芭东以南，中间隔着一座小山。和芭东海滩比起来，这里有着更绵长开阔的海岸线，海水比芭东更清澈，金黄色的沙滩也很柔软。但这里的海浪较大，海景虽好，但却不是全年都适合游泳，属溺水事件的高发地区，所以卡伦海滩没有沙滩椅和阳伞，也找不到拖曳伞、香蕉船等水上活动，不时有冲浪爱好者在这里冲浪。卡伦有不少星级酒店，与海滩只有一条马路之隔，适合喜欢安静度假的游客。购物餐饮区域和芭东相比没有那么集中，沿着海滩能找到便利店和夜市。卡伦海滩及周边属于公共区域，无需门票，24小时向公众开放。晚上的卡伦远处可以看到闪烁的渔火，海滩寂静而浪漫。</p>
+卡伦海滩位于芭东以南，中间隔着一座小山。和芭东海滩比起来，这里有着更绵长开阔的海岸线，海水比芭东更清澈，金黄色的沙滩也很柔软。但这里的海浪较大，海景虽好，但却不是全年都适合游泳，属溺水事件的高发地区，所以卡伦海滩没有沙滩椅和阳伞，也找不到拖曳伞、香蕉船等水上活动，不时有冲浪爱好者在这里冲浪。卡伦有不少星级酒店，与海滩只有一条马路之隔，适合喜欢安静度假的游客。购物餐饮区域和芭东相比没有那么集中，沿着海滩能找到便利店和夜市。卡伦海滩及周边属于公共区域，无需门票，24小时向公众开放。晚上的卡伦远处可以看到闪烁的渔火，海滩寂静而浪漫。
 </div>
 <div class="left_small_img">
   <img src="karon.jpeg" alt="Ballade" width="400" height="400">
