--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -15,14 +15,13 @@
 <p>推荐4-6天的行程，军舰岛岛强烈推荐！</p>
 </div>
 <div class="cat_bar">景点</div>
-<div class="mini_bar">海滩</div>
 <div class="pair">
 <div class="left_wide_text">
 芭东海滩位于普吉岛西海岸中段，全长3公里，属于公共区域，无需门票，24小时向公众开放。天然的海湾屏障使得芭东沙滩平缓，海浪柔和，适合游泳及在沙滩边嬉戏。靠着得天独厚的地理环境，芭东海滩也成为普吉岛开发最早，发展最成熟的海滩之一，这里酒店林立，餐厅、酒吧、小商铺比比皆是，但也正是因为她的繁华，使得芭东略显商业化，沙滩和海水的污染也排在普吉各个海滩之首。
 </div>
 <div class="right_small_img">
   <img src="padong.jpeg" alt="Ballade" width="400" height="400">
-  <div class="desc">芭东海滩</div>
+  <div class="desc">麦克海滩</div>
 </div>
 </div>
 <div class="pair">
@@ -31,7 +30,7 @@
 </div>
 <div class="left_small_img">
   <img src="karon.jpeg" alt="Ballade" width="400" height="400">
-  <div class="desc">卡伦海滩</div>
+  <div class="desc">军舰岛</div>
 </div>
 </div>
 <div class="pair">
@@ -40,7 +39,7 @@
 </div>
 <div class="right_small_img">
   <img src="kata.jpeg" alt="Ballade" width="400" height="400">
-  <div class="desc">卡塔海滩</div>
+  <div class="desc">鸟岛</div>
 </div>
 </div>
 <div class="pair">
@@ -49,7 +48,7 @@
 </div>
 <div class="left_small_img">
   <img src="katanoi.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">小卡塔海滩</div>
+  <div class="desc">蓝洞</div>
 </div>
 </div>
 <div class="pair">
@@ -58,70 +57,10 @@
 </div>
 <div class="right_small_img">
   <img src="kamala.jpeg" alt="Ballade" width="400" height="400">
-  <div class="desc">卡马拉海滩</div>
+  <div class="desc">卡梅尔山天主教大教堂</div>
 </div>
 </div>
-<div class="mini_bar">小岛</div>
-<div class="pair">
-<div class="left_wide_text">
-<p>皮皮岛位于泰国普吉岛东南约20公里处，宽3.5公里，长8公里，面积约28平方公里，其形状如同一只不规则的哑铃，两头是绿荫覆盖的小山丘，岛中央由两个半月形海湾交汇而成，靠近岸边的海水是迷人的翡翠色。岛中部极窄，最窄处只有约80米。岛上有渔民居住，度假村、饭馆、酒吧和各种娱乐场所一应俱全。<strong>邓海军提示</strong>Holiday Inn所在的通塞湾更偏，人更少，值得推荐，但离小皮皮岛远。</p>
-</div>
-<div class="right_small_img">
-  <img src="phiphi_t.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">大皮皮岛</div>
-</div>
-</div>
-<div class="pair">
-<div class="right_wide_text">
-<p>南部的小皮皮岛（Phi Phi Le）与大皮皮岛相隔约2公里，其面积约为6.6平方公里，四周耸立着悬崖峭壁，地势险要，因此罕有人烟。岛上有几个巨大的石灰岩洞穴，洞内垂吊着很多美丽的钟乳石，有些洞壁还刻有史前人类、大象、船只的壁画等。相传，这些石洞以前是安达曼海盗的窝点，故被称为“海盗洞”，又因洞内栖息着很多海燕，盛产燕窝，也被称为"燕窝洞"。泰国政府为了保护小皮皮岛的生态环境，目前只开放维京洞穴（Viking Cave）供游人参观。小皮皮岛作为好莱坞影片《海滩》的外景地，是因为她拥有天生丽质的海滩。皮雷（Pilae）、玛雅（Mahya）、罗沙玛（Losama），新月般的海湾，深蓝色的海水，艳丽多姿的海洋生物……连空气中都飘动着罗曼蒂克的味道！</p>
-</div>
-<div class="left_small_img">
-  <img src="maya.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">小皮皮岛</div>
-</div>
-</div>
-<div class="pair">
-<div class="left_wide_text">
-<p>
-攀牙湾位于普吉岛东北部75公里，在这个总面 积400平方公里的海域内有42座小岛，独特的喀斯特地貌使得这里的山形状怪异，退潮时才显现出来的山洞份外有神秘感。奇特的生长在海水中的红树林，曾经实景拍摄007电影而命名的“詹姆士邦德岛”就像一个棒槌屹立在海中央。??
-虽然攀牙湾内的海水并不清澈，呈现浑浊的绿色，但是仍然吸引着大批的旅行者。攀牙湾行程中，探索神秘的山洞是重头戏，最受欢迎的山洞有：蝙蝠洞、红树洞、钻石洞、生蚝洞、房间洞等，可以在山洞门口换乘小皮艇，两人一艘皮艇，由专业的船员划桨带您进入，每个山洞的形态不同，有的宽阔，有的狭窄到要躺在皮艇内才能穿过，既刺激有安全，有可能看到猴子、滩涂鱼、蜥蜴等湿地野生动物。??由于攀牙湾内没有供游客住宿的海岛，且游览各岛和钻山洞等行程都必须要有专业导游带领，所以建议游客不要单独前往，最好报名相关的一日游项目，包含往返接送服务。<strong>邓海军点评：</strong>还是有点意思，海上桂林</p>
-</div>
-<div class="right_small_img">
-  <img src="AoPhangNga.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">攀牙湾 邦德岛</div>
-</div>
-</div>
-<div class="pair">
-<div class="right_wide_text">
-<p>
-皇帝岛
-位于普吉岛正南方20公里处，全年向旅行者开放。虽然开发时间并不长，但是岛上优美的景致，清澈的海水，丰富的海洋生物和原生态的环境吸引了众多中国旅行者争相涌入。
-和皮皮岛相比，皇帝岛属于小景区，没有众多的景点，经常可以看到水牛、蜥蜴等动物。这里周边的水质非常清澈，从沙滩边可以直接游到海中间去浮潜。也正因为这样，皇帝岛得以悠闲而著称。??皇帝岛上没有商业区，如果想要购买纪念品可以考虑前往酒店内的纪念品店。?
-皇帝岛虽然距离普吉岛比较近，但是路途中的海浪却比去往皮皮岛更大，大浪冲进快艇里也是常有的事情，需要事先要做好颠簸的心理准备，可以在出发前先服用晕船药。皇帝岛游览的特色是风景优美，坐船时间不会太长。?
-皇帝岛也是深潜爱好者的乐园，提供差异化的潜水服务，无论你是第一次尝试潜水，或是专程来皇帝岛潜水，甚至是想要考取专业的潜水执 照，皇帝岛都是很不错的选择。岛上有中文的潜水机构，<strong>邓海军提示</strong>船停泊是更容易晕船，皇帝岛的住宿也较皮皮岛贵。
-</p>
-</div>
-<div class="right_small_img">
-  <img src="racha.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">皇帝岛</div>
-</div>
-</div>
-<div class="pair">
-<div class="left_wide_text">
-<p>
-斯米兰群岛Similan Island是世界上最美丽的、未损坏的岛屿之一，具有丰富的、种类繁多的海洋生物，以及壮观的珊瑚礁，这些为深海潜水者提供了世界级的水下天堂。1982年被指定为国家公园。
-斯米兰群岛的潜水排名一向在全世界的前十名以内，相信这些岛屿在接下来的几代能够维持现状。政府能够以他们努力维持和保护这些质朴的岛屿而感到骄傲。特别是泰国海军负责在各潜点及下锚区装设浮标以供船只悬系之用，不准任意下锚，以免伤害珊瑚等生物，如此用心保护可见一斑。轻松简单的，您就可以尽全力来保护这片特殊水域里清新，未受污染的海滩，绚烂多彩的珊瑚礁群和碧蓝的海水。
-泰国的斯米兰群岛，拥有蔚蓝的大海和广阔的沙滩，迷人的海景每年吸引成千上万的游客，是闻名世界的潜水天堂。
-相信很多人都听说过斯米兰了，是的离岛中最美丽的岛屿之一了，由于天气和环境保护的原因，斯米兰群岛每年只在11月到4月之间开放。
-斯米兰群岛
-</p>
-</div>
-<div class="right_small_img">
-  <img src="similan.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">斯米兰群岛深潜</div>
-</div>
-</div>
-<div class="mini_bar">表演</div>
+<div class="mini_bar">活动</div>
 <div class="pair">
 <div class="left_wide_text">
 <p>
